tests/samples/positive/modules/module_math.ax
module module_math;

import lib.math;

fn main() -> i32 {
    return add_one(41) - 42;
}
